--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="176dp"
+    android:layout_height="250dp"
     android:background="@color/teal_700"
     android:gravity="bottom"
     android:orientation="vertical"
@@ -10,7 +10,7 @@
 
     <ImageView
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:src="@mipmap/ic_launcher_round" />
 
     <TextView
@@ -18,7 +18,8 @@
         android:layout_height="wrap_content"
         android:paddingTop="8dp"
         android:text="@string/snav_text"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:textSize="32dp"/>
 
     <TextView
         android:layout_width="wrap_content"
