--- a/app/src/main/res/layout/fragment_cooler.xml
+++ b/app/src/main/res/layout/fragment_cooler.xml
@@ -19,8 +19,7 @@
         android:typeface="sans"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.299" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView_units"
