--- a/app/src/main/res/layout/fragment_cloud.xml
+++ b/app/src/main/res/layout/fragment_cloud.xml
@@ -4,11 +4,10 @@
     android:layout_height="match_parent"
     android:background="@android:color/holo_red_light">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/frag_cloud"
-        android:textSize="30sp"
-        android:layout_centerInParent="true"/>
+    <WebView
+        android:id="@+id/web_cloud"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        />
 
 </RelativeLayout>
