--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,9 +2,9 @@
 <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/drawer_layout"
     android:fitsSystemWindows="true"
     tools:context=".MainActivity"
     tools:openDrawer="start">
@@ -12,28 +12,28 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:background="@android:color/holo_blue_light">
+        android:background="@android:color/holo_blue_light"
+        android:orientation="vertical">
 
         <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="@color/design_default_color_primary_dark"
-            android:id="@+id/toolbar"
+            android:elevation="4dp"
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-            android:elevation="4dp" />
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
         <TextView
             android:id="@+id/textview_first"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="124dp"
-            android:textColor="@color/black"
+            android:layout_marginTop="50dp"
             android:text="@string/default_temp"
+            android:textColor="@color/black"
             android:textSize="72sp"
             android:typeface="sans"
-            android:layout_marginTop="50dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -43,12 +43,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="0dp"
+            android:layout_marginTop="50dp"
             android:layout_toEndOf="@+id/textview_first"
             android:text="@string/temp_unit"
             android:textColor="@color/black"
             android:textSize="72sp"
             android:typeface="sans"
-            android:layout_marginTop="50dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/textview_first"
@@ -60,8 +60,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/up_count_button"
-            android:layout_marginStart="160dp"
+            android:layout_alignParentEnd="true"
             android:layout_marginTop="80dp"
+            android:layout_marginEnd="60dp"
             android:background="@color/buttonBackground"
             android:text="@string/toast_button_text"
             android:textColor="@color/black"
@@ -74,8 +75,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/textView_units"
+            android:layout_alignParentEnd="true"
             android:layout_marginStart="80dp"
             android:layout_marginTop="335dp"
+            android:layout_marginEnd="75dp"
             android:layout_toEndOf="@+id/up_count_button"
             android:background="@color/buttonBackground"
             android:text="@string/temp_down_button"
@@ -89,10 +92,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/textview_first"
+            android:layout_alignParentStart="true"
             android:layout_marginStart="80dp"
             android:layout_marginTop="335dp"
-            android:text="@string/temp_up_button"
             android:background="@color/buttonBackground"
+            android:text="@string/temp_up_button"
             app:layout_constraintBottom_toTopOf="@+id/down_count_button"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -100,20 +104,26 @@
 
         <Button
             android:id="@+id/askPermissions"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Ask Permissions"
-            android:textAllCaps="false"/>
+            android:layout_below="@+id/up_count_button"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="80dp"
+            android:layout_marginTop="80dp"
+            android:layout_marginBottom="74dp"
+            android:text="@string/ask_perm"
+            android:textAllCaps="false" />
 
     </RelativeLayout>
 
     <com.google.android.material.navigation.NavigationView
+        android:id="@+id/nav_view"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        android:id="@+id/nav_view"
         app:headerLayout="@layout/nav_header"
-        app:menu="@menu/drawer_menu"/>
+        app:menu="@menu/drawer_menu" />
 
 
 </androidx.drawerlayout.widget.DrawerLayout>
