--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="screenBackground">#2196F3</color>
     <color name="screenBackground2">#26C6DA</color>
     <color name="buttonBackground">#BBDEFB</color>
+    <color name="ColorPolyline">#1a81cb</color>
 </resources>
