--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,104 +24,111 @@
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
             app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
-        <TextView
-            android:id="@+id/textview_first"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:id="@+id/TemperatureLayout"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="124dp"
+            android:background="@android:color/holo_blue_light"
+            android:orientation="horizontal"
+            android:layout_below="@id/toolbar">
+            <Button
+                android:id="@+id/up_count_button"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@color/buttonBackground"
+                android:text="@string/temp_up_button"
+                android:translationY="-15dp" />
+            <TextView
+                android:id="@+id/textview_first"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/default_temp"
+                android:textColor="@color/black"
+                android:textSize="72sp"
+                android:typeface="sans" />
+            <TextView
+                android:id="@+id/textView_units"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/temp_unit"
+                android:textColor="@color/black"
+                android:textSize="72sp"
+                android:typeface="sans" />
+            <Button
+                android:id="@+id/down_count_button"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:background="@color/buttonBackground"
+                android:text="@string/temp_down_button"
+                android:translationY="-15dp"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/BluetoothLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
             android:layout_marginTop="50dp"
-            android:text="@string/default_temp"
-            android:textColor="@color/black"
-            android:textSize="72sp"
-            android:typeface="sans"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:layout_below="@id/TemperatureLayout">
+            <Button
+                android:id="@+id/btnONOFF"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:background="@color/buttonBackground"
+                android:text="@string/endis_BT"
+                style="?android:attr/buttonBarButtonStyle" />
 
-        <TextView
-            android:id="@+id/textView_units"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="0dp"
-            android:layout_marginTop="50dp"
-            android:layout_toEndOf="@+id/textview_first"
-            android:text="@string/temp_unit"
-            android:textColor="@color/black"
-            android:textSize="72sp"
-            android:typeface="sans"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/textview_first"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0" />
+            <Button
+                android:id="@+id/btnDiscover"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:text="@string/endis_discover"
+                android:background="@color/buttonBackground"
+                style="?android:attr/buttonBarButtonStyle" />
 
-        <Button
-            android:id="@+id/down_count_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/textView_units"
-            android:layout_alignParentEnd="true"
-            android:layout_marginStart="80dp"
-            android:layout_marginTop="130dp"
-            android:layout_marginEnd="75dp"
-            android:layout_toEndOf="@+id/up_count_button"
-            android:background="@color/buttonBackground"
-            android:text="@string/temp_down_button"
-            android:textColor="@color/black"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/refresh_button"
-            app:layout_constraintTop_toBottomOf="@+id/up_count_button" />
+            <Button
+                android:id="@+id/btnStartConnection"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:background="@color/buttonBackground"
+                android:text="@string/start_conn"
+                style="?android:attr/buttonBarButtonStyle" />
+        </LinearLayout>
 
-        <Button
-            android:id="@+id/up_count_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/textview_first"
-            android:layout_alignParentStart="true"
-            android:layout_marginStart="80dp"
-            android:layout_marginTop="130dp"
-            android:background="@color/buttonBackground"
-            android:text="@string/temp_up_button"
-            app:layout_constraintBottom_toTopOf="@+id/down_count_button"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textview_first" />
 
-        <Button
-            android:id="@+id/refresh_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/up_count_button"
-            android:layout_alignParentEnd="true"
-            android:layout_marginTop="80dp"
-            android:layout_marginEnd="60dp"
-            android:background="@color/buttonBackground"
-            android:text="@string/toast_button_text"
-            android:textColor="@color/black"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textview_first" />
-
-        <Button
-            android:id="@+id/askPermissions"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/up_count_button"
-            android:layout_alignParentStart="true"
-            android:layout_marginStart="80dp"
-            android:layout_marginTop="80dp"
-            android:layout_marginEnd="30dp"
-            android:layout_toStartOf="@+id/refresh_button"
-            android:background="@color/buttonBackground"
-            android:textColor="@color/black"
-
-            android:text="@string/ask_perm"
-            />
         <ListView
-            android:layout_below="@id/askPermissions"
+            android:layout_below="@id/BluetoothLayout"
             android:layout_width="match_parent"
             android:layout_height="150dp"
-            android:id="@+id/lvNewDevices"/>
+            android:id="@+id/lvNewDevices">
+        </ListView>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/lvNewDevices"
+            android:id="@+id/LabelText"
+            android:text="For Server Communication Validation"/>
+        <EditText
+            android:layout_width="250dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/LabelText"
+            android:layout_alignParentStart="true"
+            android:hint="Enter Text Here"
+            android:id="@+id/editText"/>
+        <Button
+            android:id="@+id/btnSend"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@color/buttonBackground"
+            android:text="Send"
+            android:layout_below="@id/LabelText"
+            android:layout_toRightOf="@id/editText"/>
 
     </RelativeLayout>
 
