--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -72,23 +72,7 @@
             android:orientation="horizontal"
             android:layout_marginTop="50dp"
             android:layout_below="@id/TemperatureLayout">
-            <Button
-                android:id="@+id/btnONOFF"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="wrap_content"
-                android:background="@color/buttonBackground"
-                android:text="@string/endis_BT"
-                style="?android:attr/buttonBarButtonStyle" />
 
-            <Button
-                android:id="@+id/btnDiscover"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="wrap_content"
-                android:text="@string/endis_discover"
-                android:background="@color/buttonBackground"
-                style="?android:attr/buttonBarButtonStyle" />
 
             <Button
                 android:id="@+id/btnStartConnection"
@@ -102,22 +86,21 @@
 
 
         <ListView
-            android:layout_below="@id/BluetoothLayout"
+            android:id="@+id/lvNewDevices"
             android:layout_width="match_parent"
             android:layout_height="150dp"
-            android:id="@+id/lvNewDevices">
-        </ListView>
+            android:layout_below="@id/BluetoothLayout"></ListView>
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/lvNewDevices"
-            android:id="@+id/LabelText"
+            android:id="@+id/status"
             android:text="For Server Communication Validation"/>
         <EditText
             android:layout_width="250dp"
             android:layout_height="wrap_content"
-            android:layout_below="@id/LabelText"
+            android:layout_below="@id/status"
             android:layout_alignParentStart="true"
             android:hint="Enter Text Here"
             android:id="@+id/editText"/>
@@ -127,7 +110,7 @@
             android:layout_height="wrap_content"
             android:background="@color/buttonBackground"
             android:text="Send"
-            android:layout_below="@id/LabelText"
+            android:layout_below="@id/status"
             android:layout_toRightOf="@id/editText"/>
         <TextView
             android:layout_width="250dp"
