--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,96 +28,100 @@
             android:id="@+id/TemperatureLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_below="@id/toolbar"
+            android:layout_gravity="center_vertical"
+            android:layout_marginBottom="50dp"
             android:background="@android:color/holo_blue_light"
-            android:orientation="horizontal"
-            android:layout_below="@id/toolbar">
+            android:orientation="horizontal">
+
             <Button
                 android:id="@+id/up_count_button"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginStart="20dp"
                 android:layout_weight="1"
-                android:background="@color/buttonBackground"
-                android:text="@string/temp_up_button"
-                android:translationY="-15dp" />
+                android:background="@drawable/circle"
+                android:gravity="center"
+                android:text="@string/temp_up_button" />
+
             <TextView
                 android:id="@+id/textview_first"
-                android:layout_width="wrap_content"
+                android:layout_width="100dp"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="30dp"
+                android:layout_marginEnd="0dp"
+                android:layout_weight="2"
                 android:text="@string/default_temp"
+                android:textAlignment="center"
                 android:textColor="@color/black"
                 android:textSize="72sp"
                 android:typeface="sans" />
+
             <TextView
                 android:id="@+id/textView_units"
-                android:layout_width="wrap_content"
+                android:layout_width="100dp"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="0dp"
+                android:layout_marginEnd="30dp"
+                android:layout_weight="2"
                 android:text="@string/temp_unit"
+                android:textAlignment="viewStart"
                 android:textColor="@color/black"
                 android:textSize="72sp"
                 android:typeface="sans" />
+
             <Button
                 android:id="@+id/down_count_button"
-                android:layout_width="0dp"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginEnd="20dp"
                 android:layout_weight="1"
-                android:layout_height="wrap_content"
-                android:background="@color/buttonBackground"
-                android:text="@string/temp_down_button"
-                android:translationY="-15dp"/>
+                android:background="@drawable/circle"
+                android:gravity="center"
+                android:text="@string/temp_down_button" />
         </LinearLayout>
 
         <LinearLayout
             android:id="@+id/BluetoothLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginTop="50dp"
-            android:layout_below="@id/TemperatureLayout">
+            android:layout_below="@id/TemperatureLayout"
+            android:layout_marginBottom="20dp"
+            android:orientation="horizontal">
 
 
             <Button
                 android:id="@+id/btnStartConnection"
-                android:layout_width="0dp"
-                android:layout_weight="1"
+                style="?android:attr/buttonBarButtonStyle"
+                android:layout_width="150dp"
                 android:layout_height="wrap_content"
-                android:background="@color/buttonBackground"
-                android:text="@string/start_conn"
-                style="?android:attr/buttonBarButtonStyle" />
+                android:layout_weight="1"
+                android:background="@drawable/rounded_corner"
+                android:text="@string/start_conn" />
+            <Button
+                android:id="@+id/btnUpdate"
+                style="?android:attr/buttonBarButtonStyle"
+                android:layout_width="150dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@drawable/rounded_corner"
+                android:text="Update Temp" />
         </LinearLayout>
 
 
         <ListView
             android:id="@+id/lvNewDevices"
             android:layout_width="match_parent"
-            android:layout_height="150dp"
+            android:layout_height="200dp"
             android:layout_below="@id/BluetoothLayout"></ListView>
 
         <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/lvNewDevices"
             android:id="@+id/status"
-            android:text="For Server Communication Validation"/>
-        <EditText
-            android:layout_width="250dp"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/status"
-            android:layout_alignParentStart="true"
-            android:hint="Enter Text Here"
-            android:id="@+id/editText"/>
-        <Button
-            android:id="@+id/btnSend"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@color/buttonBackground"
-            android:text="Send"
-            android:layout_below="@id/status"
-            android:layout_toRightOf="@id/editText"/>
-        <TextView
-            android:layout_width="250dp"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/editText"
-            android:id="@+id/serverMessage"
-            android:text="Incoming Server Message"/>
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_below="@id/lvNewDevices"
+            android:text="For Bluetooth Server Validation" />
+
 
     </RelativeLayout>
 
