--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -34,6 +34,14 @@
             android:layout_marginStart="8dp"
             android:layout_weight="1"
             android:text="@string/end" />
+
+        <Button
+            android:id="@+id/saveButton"
+            style="?android:attr/buttonBarButtonStyle"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="save"/>
     </LinearLayout>
 
     <RelativeLayout
