--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -42,6 +42,15 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="save"/>
+
+        <Button
+            android:id="@+id/loadButton"
+            style="?android:attr/buttonBarButtonStyle"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="load"/>
+
     </LinearLayout>
 
     <RelativeLayout
